# Ansible_Ubuntu_Dev_Config

./: README.md  ansible.cfg  defaults.config.yml  main.yml  pyproject.toml  requirements.yml
roles/bitwarden/tasks/: main.yml
roles/brave/tasks/: main.yml
roles/cosmos/tasks/: main.yml
roles/dbeaver/tasks/: main.yml
roles/default/tasks/: main.yml
roles/discord/tasks/: main.yml
roles/docker/files/: get_docker_deb_link.py  run_script.sh
roles/docker/tasks/: main.yml  script.yml
roles/go/tasks/: main.yml
roles/goenv/tasks/: main.yml
roles/homebrew/tasks/: main.yml
roles/libfuse/tasks/: main.yml
roles/nvm/tasks/: main.yml
roles/obsidian/tasks/: main.yml
roles/obsidian/vars/: main.yml
roles/poetry/meta/: main.yml
roles/poetry/tasks/: main.yml
roles/postman/tasks/: main.yml
roles/pyenv/meta/: main.yml
roles/pyenv/tasks/: main.yml
roles/rust/tasks/: main.yml
roles/slack/tasks/: main.yml
roles/snapd/tasks/: main.yml
roles/solaar/tasks/: main.yml
roles/stretchly/files/: config.json
roles/stretchly/tasks/: main.yml
roles/stretchly/templates/: stretchly.desktop.j2
roles/teamviewer/tasks/: main.yml
roles/terraform/tasks/: main.yml
roles/vlc/tasks/: main.yml
roles/vscode/tasks/: main.yml
roles/vscode/tasks/templates/: settings.json
roles/vscode/templates/: settings.json
roles/wezterm/tasks/: main.yml
roles/zsh/tasks/: main.yml  plugins.yml  themes.yml
roles/zsh/templates/: aliases.zsh  shortcuts.zsh
