[tool.poetry]
name = "ansible-ubuntu-dev-config-main"
version = "0.1.0"
description = ""
authors = ["Ben Wolfaardt <benjaminwolfaardt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

beautifulsoup4 = "4.12.2"
requests = "2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
